# algorithm-

./: .gitignore  CMakeLists.txt  GUIDANCE_FOR_LEARNING_ALGORITHM.md  README.md  compile.bat  run.bat  run.ps1  run_debug.bat
problems/: 01_utra_quicksort fail1.c  01_utra_quicksort fail2.c  01_utra_quicksort.c  02_minimize_resource.c  03_monthly_expense.c  04_string_dfa_search.c  05_string_match_KMP.c  05_string_match_KMP.md  05_string_match_KMP_test.c  06_string_match_BM.c
templates/: template.c  template.cpp
tests/: README.md
utils/: README.md  common.h  performance.h
